RESOLVED FIXED80690
[BlackBerry] Web Notification not working after rebase
https://bugs.webkit.org/show_bug.cgi?id=80690
Summary [BlackBerry] Web Notification not working after rebase
Charles Wei
Reported 2012-03-09 02:40:57 PST
Web Notification doesn't work on master_35 after rebase. The upstreaming notification is now connected in different way. We need to adapt the new way of connecting the Notifications to the WebCore. New way: WebCore::provideNotificaiton() , defined in NotificaionController.h/cpp old way: ChromeClient::notificaionPresenter(), which is removed .
Attachments
Patch (6.15 KB, patch)
2012-03-09 03:09 PST, Charles Wei
no flags
Charles Wei
Comment 1 2012-03-09 02:42:38 PST
Internal PR: 142886
Charles Wei
Comment 2 2012-03-09 03:09:35 PST
Created attachment 131022 [details] Patch With this patch, we did: 1. Namespace of NotificationPresenterImpl moved from WebKit to WebCore. All code in WebCoreSupport should be in the namespace of WebCore. 2. Remove the un-needed ChromeClientBlackBerry::notificationPresenter 3. Connect the NotificationPresenter to WebCore using WebCore::provideNotification(Page*, NotificationPresenter*).
WebKit Review Bot
Comment 3 2012-03-09 05:11:43 PST
Comment on attachment 131022 [details] Patch Clearing flags on attachment: 131022 Committed r110290: <http://trac.webkit.org/changeset/110290>
WebKit Review Bot
Comment 4 2012-03-09 05:11:48 PST
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 5 2012-03-09 05:21:01 PST
This should not have landed. We are not landing any m35 only patches until it is deployed.
Antonio Gomes
Comment 6 2012-03-09 05:22:57 PST
..
Charles Wei
Comment 7 2012-03-09 20:30:56 PST
What should we do reopening it? should we revert the patch ?
Antonio Gomes
Comment 8 2012-03-09 20:42:44 PST
Well, we can close it. I do not think it can cause backport problems. Rob also landed a few patches in the same situation (m35) , but we've agreed to wait a bit, and some patches are on hold. Lets leave this one in : ) why not?
Note You need to log in before you can comment on or make changes to this bug.