[BlackBerry] Web Notification not working after rebase https://bugs.webkit.org/show_bug.cgi?id=80690

Reviewed by George Staikos.

1. NotificationPresenterImpl should be in namespace WebCore
2. Need to connect NotificationPresenterImpl to webcore the new way:
   WebCore::provideNotification(Page*, NotificationPresenter*)
3. Remove the old way of connecting the Notification:
   ChromeClientBlackBerry::notificationPresenter()

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::init):
* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore):
* WebCoreSupport/ChromeClientBlackBerry.h:
(ChromeClientBlackBerry):
* WebCoreSupport/NotificationPresenterImpl.cpp:
* WebCoreSupport/NotificationPresenterImpl.h:


Canonical link: https://commits.webkit.org/97886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110290 268f45cc-cd09-0410-ab3c-d52691b4dbfc